[package]
name = "tokio-tls"
version = "0.1.4"
authors = ["Carl Lerche <me@carllerche.com>",
           "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/tokio-tls"
homepage = "https://github.com/tokio-rs/tokio-tls"
documentation = "https://docs.rs/tokio-tls"
description = """
An implementation of TLS/SSL streams for Tokio giving an implementation of TLS
for nonblocking I/O streams.
"""
categories = ["asynchronous", "network-programming"]

[badges]
travis-ci = { repository = "tokio-rs/tokio-tls" }
appveyor = { repository = "alexcrichton/tokio-tls" }

[dependencies]
futures = "0.1.11"
native-tls = {git = "https://github.com/sfackler/rust-native-tls.git"}
tokio-core = "0.1.6"
tokio-io = "0.1"
tokio-proto = { version = "0.1", optional = true }

[dev-dependencies]
cfg-if = "0.1"
env_logger = { version = "0.4", default-features = false }
hyper = "0.11"
tokio-service = "0.1"

[target.'cfg(all(not(target_os = "macos"), not(windows), not(target_os = "ios")))'.dev-dependencies]
openssl = "0.9"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dev-dependencies]
security-framework = "0.1"

[target.'cfg(windows)'.dev-dependencies]
schannel = "0.1"

[target.'cfg(windows)'.dev-dependencies.winapi]
version = "0.3"
features = [
  "lmcons",
  "basetsd",
  "minwinbase",
  "minwindef",
  "ntdef",
  "sysinfoapi",
  "timezoneapi",
  "wincrypt",
  "winerror",
]
